--- a/makefile.inc
+++ b/makefile.inc
@@ -35,7 +35,6 @@ testsourcefiles := $(test_src_dir)/$(test_package)/*.java
 testclassfiles := $(test_build_dir)/$(test_package)/*.class $(test_build_dir)/$(test_package)/gen/*.class
 
 # Locations of tools:
-third_party_unzip_dir = /Transient/dabl/thirdpartyunzip
 SONAR_RUNNER=/Users/cliffordberg/Library/sonar-runner-2.4/bin/sonar-runner
 JAVA_HOME:=$(shell /usr/libexec/java_home)
 #JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk1.7.0_80.jdk/Contents/Home
@@ -44,19 +43,15 @@ Library:=$(Userdir)/Library
 sable:=$(Library)/sablecc-3.2
 sable_out_dir:=$(CurDir)/SableCCOutput
 junit_dir=Userdir/Library/JUnit
-aws_jar:=$(Userdir)/Library/aws-java-sdk-1.10.0/lib/aws-java-sdk-1.10.0.jar
-aws_3rdParty_dir:=$(Userdir)/Library/aws-java-sdk-1.10.0/third-party
-ectools:=$(Userdir)/Library/ec2-api-tools-1.7.4.0/bin
 log4jcore=:$(Userdir)/Library/apache-log4j-2.0.2-bin/log4j-core-2.0.2.jar
 log4japi:=$(Userdir)/Library/apache-log4j-2.0.2-bin/log4j-1.2-api-2.0.2.jar
 commonslogging12:=$(Userdir)/Library/commons-logging-1.2/commons-logging-1.2.jar
 #jacksondir:=$(Userdir)/Library/jackson-2.5.4
 #PATH:=$(PATH):$(ectools)
-aws_3rdParty:=$(aws_3rdParty_dir)/jackson-databind-2.5.3/jackson-databind-2.5.3.jar:$(aws_3rdParty_dir)/jackson-annotations-2.5.3/jackson-annotations-2.5.3.jar:$(aws_3rdParty_dir)/jackson-core-2.5.3/jackson-core-2.5.3.jar:$(aws_3rdParty_dir)/commons-logging-1.1.3/commons-logging-1.1.3.jar:$(aws_3rdParty_dir)/httpcomponents-client-4.3/httpcore-4.3.3.jar:$(aws_3rdParty_dir)/httpcomponents-client-4.3/httpclient-4.3.6.jar:$(aws_3rdParty_dir)/joda-time-2.8/joda-time-2.8.jar
 
 # Java classpaths:
-buildcp:=$(build_dir):$(aws_jar)
-runcp:=$(build_dir):$(aws_jar):$(aws_3rdParty)
+buildcp:=$(build_dir)
+runcp:=$(build_dir):$(aws_jar)
 test_compile_cp := $(junit_dir)/*:$(test_build_dir):$(build_dir)
 test_cp := $(junit_dir)/*:$(test_build_dir):$(build_dir)
 
@@ -66,8 +61,8 @@ sourcefiles := $(src_dir)/$(package)/*.java \
 	$(src_dir)/$(package)/provider/*.java \
 	$(src_dir)/$(package)/gen/*.java \
 	$(src_dir)/$(package)/test/gen/*.java
-classfiles := $(build_dir)/$(package)/*.class \
-	$(src_dir)/$(package)/main/*.class \
-	$(src_dir)/$(package)/provider/*.class \
-	$(src_dir)/$(package)/gen/*.class \
-	$(src_dir)/$(package)/test/gen/*.class
+classfiles := \
+	$(build_dir)/$(package)/analysis/*.class \
+	$(build_dir)/$(package)/lexer/*.class \
+	$(build_dir)/$(package)/node/*.class \
+	$(build_dir)/$(package)/parser/*.class
