--- a/makefile.inc
+++ b/makefile.inc
@@ -22,7 +22,12 @@ junit_dir := $(Library)/JUnit
 log4jcore := $(Library)/apache-log4j-2.0.2-bin/log4j-core-2.0.2.jar
 log4japi := $(Library)/apache-log4j-2.0.2-bin/log4j-1.2-api-2.0.2.jar
 commonslogging12 := $(Library)/commons-logging-1.2/commons-logging-1.2.jar
-jaxrs := $(Library)/jaxrs-ri
+jaxrs := $(Library)/jaxrs-ri/api/*
+jaxrs := $(jaxrs):$(Library)/jaxrs-ri/lib/*
+jaxrs := $(jaxrs):$(Library)/jaxrs-ri/ext/*
+#apache_http := $(Library)/httpcomponents-client-4.4.6/lib/*
+apache_http := $(Library)/httpcomponents-client-4.5.3/lib/*
+junixsocket := /Users/cliffordberg/Documents/ScaledMarkets/DABL/junixsocket/lib/junixsocket.jar
 CUCUMBER_CLASSPATH := $(Library)/Cucumber/cucumber-core-1.1.8.jar
 CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(Library)/Cucumber/cucumber-java-1.1.8.jar
 CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(Library)/Cucumber/cucumber-jvm-deps-1.0.3.jar
