--- a/makefile.inc
+++ b/makefile.inc
@@ -30,7 +30,7 @@ jersey := $(Library)/jersey/*
 apache_http := $(Library)/httpcomponents-client-4.5.3/lib/*
 junixsocket := /Users/cliffordberg/Documents/ScaledMarkets/DABL/junixsocket/lib/junixsocket.jar
 junixsocketnative := /Users/cliffordberg/Documents/ScaledMarkets/DABL/junixsocket/classes
-javaxjson := $(Library)/javax.json
+javaxjson := $(Library)/javax.json/*
 CUCUMBER_CLASSPATH := $(Library)/Cucumber/cucumber-core-1.1.8.jar
 CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(Library)/Cucumber/cucumber-java-1.1.8.jar
 CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(Library)/Cucumber/cucumber-jvm-deps-1.0.3.jar
