--- a/java/scaledmarkets/dabl/dabl.properties
+++ b/java/scaledmarkets/dabl/dabl.properties
@@ -1,2 +1,4 @@
-dabl.local_repository_dir=
-dabl.properties=
+local_repository_dir=
+repo.providers.dummy=
+repo.providers.gitlocal=
+repo.providers.gitremote=
