--- a/java/scaledmarkets/dabl/.dabl.properties
+++ b/java/scaledmarkets/dabl/.dabl.properties
@@ -1,4 +1,4 @@
-local_repository_dir=
-repo.providers.dummy=
-repo.providers.gitlocal=
-repo.providers.gitremote=
+dabl.local_repository_dir=
+dabl.repo.providers.dummy=
+dabl.repo.providers.gitlocal=
+dabl.repo.providers.gitremote=
