--- a/java/scaledmarkets/dabl/.dabl.properties
+++ b/java/scaledmarkets/dabl/.dabl.properties
@@ -1,4 +1,4 @@
 dabl.local_repository_dir=
-dabl.repo.providers.dummy=
-dabl.repo.providers.gitlocal=
-dabl.repo.providers.gitremote=
+dabl.repo.providers.dummy=scaledmarkets.dabl.repos.DummyProvider
+dabl.repo.providers.gitlocal=scaledmarkets.dabl.repos.GitLocalProvider
+dabl.repo.providers.gitremote=scaledmarkets.dabl.repos.GitRemoteProvider
