--- a/taskruntime/Dockerfile
+++ b/taskruntime/Dockerfile
@@ -1,6 +1,12 @@
 # Container for running a DABL task.
-FROM docker.io/alpine
+
+FROM registry.hub.docker.com/alpine
+# See https://hub.docker.com/_/alpine/
+# Perhaps use registry.hub.docker.com/anapsix/alpine-java:8_server-jre
+# See https://hub.docker.com/r/anapsix/alpine-java/
+# See https://github.com/anapsix/docker-alpine-java
+
 RUN mkdir /taskruntime
 ADD ["taskruntime.jar", "/taskruntime/"]
 WORKDIR /taskruntime/
-CMD ["java", "-jar", "taskruntime.jar"]
+ENTRYPOINT ["java", "-jar", "taskruntime.jar"]
