--- a/.dabl.properties
+++ b/.dabl.properties
@@ -3,3 +3,4 @@ dabl.repo.providers.dummy=scaledmarkets.dabl.repos.DummyProvider
 dabl.repo.providers.gitlocal=scaledmarkets.dabl.repos.GitLocalProvider
 dabl.repo.providers.gitremote=scaledmarkets.dabl.repos.GitRemoteProvider
 dabl.task_container_image_name=dockerhub/ScaledMarkets/taskruntime
+dabl.function_handler.bash=scaledmarkets.dabl.handlers.JavaFunctionHandler
