--- a/taskruntime/Dockerfile
+++ b/taskruntime/Dockerfile
@@ -1,7 +1,8 @@
 # Container for running a DABL task.
 # Requres the environment variable $jar_dir to be set.
 
-FROM alpine
+#FROM alpine
+FROM anapsix/alpine-java
 #FROM registry.hub.docker.com/alpine
 # See https://hub.docker.com/_/alpine/
 # Perhaps use registry.hub.docker.com/anapsix/alpine-java:8_server-jre
