--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,13 @@
 	
 	<properties>
 		<revision>${env.DABL_VERSION}</revision>
-		<javaversion>${env.JavaVersion}</javaversion>
 		<Xmaxerrs>${env.maxerrs}</Xmaxerrs>
+		<JarDir>${env.jar_dir}</JarDir>
+		<ImageBuildDir>${env.ImageBuildDir}</ImageBuildDir>
+		
+		<maven.compiler.source>${env.JavaVersion}</maven.compiler.source>
+		<maven.compiler.target>${env.JavaVersion}</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<modules>
@@ -98,7 +103,7 @@
 				<configuration>
 					<toolchains>
 						<jdk>
-							<version>1.8</version>
+							<version>${env.JavaVersion}</version>
 							<vendor>oracle</vendor>
 						</jdk>
 					</toolchains>
