first successful compile since changing onamed_artifact_set to refer to oartifact_spec instead of oartifact_set

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,6 +15,18 @@
 	
 	<dependencies>
 		
+		<dependency>
+			<groupId>scaledmarkets</groupId>
+			<artifactId>parser</artifactId>
+			<version>0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>scaledmarkets</groupId>
+			<artifactId>common</artifactId>
+			<version>0.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
