--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,16 @@
 				</configuration>
 			</plugin>
 			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<aggregate>true</aggregate>
+					<outputDirectory>${javadoc_dir}</outputDirectory>
+				</configuration>
+			</plugin>
+			
 		</plugins>
 		
 	</build>
