the test module builds

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -43,6 +43,30 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>scaledmarkets</groupId>
+			<artifactId>parser</artifactId>
+			<version>0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>scaledmarkets</groupId>
+			<artifactId>common</artifactId>
+			<version>0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>scaledmarkets</groupId>
+			<artifactId>client</artifactId>
+			<version>0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>scaledmarkets</groupId>
+			<artifactId>task_runtime</artifactId>
+			<version>0.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
