--- a/makefile.inc
+++ b/makefile.inc
@@ -26,17 +26,15 @@ export jar_dir = $(HOME)/Transient/dabl/jars
 export UserHome := $(HOME)
 
 # Locations of dev tools:
-export DevLibrary := $(UserHome)/Library
-export sable := $(DevLibrary)/sablecc-3.6
-jaxrs := $(DevLibrary)/jaxrs-ri/api/*
-jaxrs := $(jaxrs):$(DevLibrary)/jaxrs-ri/lib/*
-jaxrs := $(jaxrs):$(DevLibrary)/jaxrs-ri/ext/*
-export jaxrs
-export jersey := $(DevLibrary)/jersey/*
-export apache_http := $(DevLibrary)/httpcomponents-client-4.5.3/lib/*
-export javaxjson := $(DevLibrary)/javax.json/*
-CUCUMBER_CLASSPATH := $(DevLibrary)/Cucumber/cucumber-core-1.1.8.jar
-CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(DevLibrary)/Cucumber/cucumber-java-1.1.8.jar
-CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(DevLibrary)/Cucumber/cucumber-jvm-deps-1.0.3.jar
-CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(DevLibrary)/Cucumber/gherkin-2.12.2.jar
+export MVN_REPO := $(HOME)/.m2/repository
+#export sable := $(DevLibrary)/sablecc-3.6
+jaxrs := $(MVN_REPO)/org/glassfish/jersey/bundles/jaxrs-ri/2.27/jaxrs-ri-2.27.jar
+export jaxrs := $(jaxrs):$(MVN_REPO)/org/glassfish/jersey/connectors/jersey-apache-connector/2.27/jersey-apache-connector-2.27.jar
+export apache_http := $(MVN_REPO)/org/apache/httpcomponents/httpclient/4.5.5/httpclient-4.5.5.jar
+export javaxjson := $(MVN_REPO)/javax/json/javax.json-api/1.1.2/javax.json-api-1.1.2.jar
+#export jersey := $(DevLibrary)/jersey/*
+CUCUMBER_CLASSPATH := $(MVN_REPO)/info/cukes/cucumber-java/1.2.5/cucumber-java-1.2.5.jar
+CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(MVN_REPO)/info/cukes/cucumber-core/1.2.5/cucumber-core-1.2.5.jar
+CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(MVN_REPO)/info/cukes/cucumber-jvm-deps/1.0.5/cucumber-jvm-deps-1.0.5.jar
+CUCUMBER_CLASSPATH := $(CUCUMBER_CLASSPATH):$(MVN_REPO)/info/cukes/gherkin/2.12.2/gherkin-2.12.2.jar
 export CUCUMBER_CLASSPATH
